<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NOMP-Mobile</string>
    <string name="action_settings">Settings</string>

    <!-- Text for login form -->
    <string name="text_button_login">Login</string>
    <string name="text_or"> OR </string>
    <string name="text_button_sign_up">Sign up</string>

    <!-- Text for sign up form -->
    <string name="text_label_full_name">Full name:</string>
    <string name="text_hint_full_name">Enter your full name</string>
    <string name="text_label_email">Email:</string>
    <string name="text_hint_email">Enter an email address</string>
    <string name="text_label_username">Username:</string>
    <string name="text_hint_username">Enter an username</string>
    <string name="text_label_password">Password</string>
    <string name="text_hint_password">Enter your password</string>
    <string name="text_label_source">Identity:</string>
    <string name="text_label_sub_source">Sub identity:</string>

    <!-- Text for ticket form -->
    <string name="text_label_title">Title:</string>
    <string name="text_hint_title">Enter a title for the ticket</string>
    <string name="text_label_classification">Classification:</string>
    <string name="text_button_classification">Update classification</string>
    <string name="text_label_target">Target:</string>
    <string name="text_button_target">Update actor</string>
    <string name="text_label_period">Period:</string>
    <string name="text_button_period_from">Start date</string>
    <string name="text_button_period_to">End date</string>
    <string name="text_seperator_period"> - </string>
    <string name="text_label_quantity">Quantity:</string>
    <string name="text_hint_quantity">Enter a quantity</string>
    <string name="text_label_price">Price:</string>
    <string name="text_label_price_cost">Cost:</string>
    <string name="text_label_price_budget">Budget:</string>
    <string name="text_hint_price">Enter a price</string>
    <!-- holder for the field cost/budget -->
    <string name="text_hint_price_cost">Enter the cost</string>
    <string name="text_hint_price_budget">Enter the budget</string>
    <string name="text_label_description">Description:</string>
    <string name="text_hint_description">Enter a description for the ticket</string>
    <string name="text_label_location">Location:</string>
    <string name="text_hint_location">Enter a location</string>
    <string name="text_content_description_gps_loader">GPS</string>
    <string name="text_label_photo">Photos</string>
    <string name="text_button_photo">Add photo</string>

    <!-- Text for address dialog -->
    <string name="text_address_dialog_title">Enter address</string>
    <string name="text_hint_number">Number</string>
    <string name="text_hint_road">Road name</string>
    <string name="text_hint_postal_code">Postal code</string>
    <string name="text_hint_city">City</string>
    <string name="text_hint_country">Country</string>
    <string name="text_address_dialog_button_positive">OK</string>
    <string name="text_address_dialog_button_negative">Cancel</string>

    <!-- Text for account page -->
    <string name="text_welcome">Welcome </string>
    <string name="text_label_post">POST TICKET</string>
    <string name="text_label_post_need">Add a need</string>
    <string name="text_label_post_offer">Add an offer</string>
    <string name="text_label_list">MY TICKETS</string>
    <string name="text_label_my_needs">My needs</string>
    <string name="text_label_my_offers">My offers</string>
    <string name="text_label_settings">SETTINGS</string>
    <string name="text_label_my_settings">My settings</string>
    <string name="action_logout">Logout</string>

    <!-- Error message for login -->
    <string name="error_incorrect_email">Incorrect email address</string>

    <!-- Error message for sign in form validation -->
    <string name="text_error_full_name">Full name required</string>
    <string name="text_error_email">Email address required</string>
    <string name="text_error_email_format">Email address is malformed</string>
    <string name="text_error_username">Username required</string>
    <string name="text_error_password">Password required</string>
    <string name="text_error_source">Actor type required</string>

    <!-- Error message for ticket form validation -->
    <string name="text_error_title">Ticket title required</string>
    <string name="text_error_period_from">Start date required</string>
    <string name="text_error_period_to">End date required</string>
    <string name="text_error_location">Address required</string>
    <string name="text_error_description">Description required</string>

    <!-- Text for ticket page -->
    <string name="text_ticket_label_period">Available:</string>
    
    <!-- Text for ticket list -->
    <string name="text_label_creation_date">Posted at </string>
    <string name="action_reset">Reset all</string>

    <!-- Text for action bar items -->
    <string name="text_ticket_form_send">Send ticket</string>
    <string name="text_ticket_page_matched">View matched</string>

    <!-- Text for activity title -->
    <string name="title_activity_ticket_form">Post</string>
    <string name="title_activity_ticket_page">View</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_account">My Account</string>
    <string name="title_activity_ticket_list">My Tickets</string>
    <string name="title_activity_matched_ticket_list">Matched Tickets</string>

    <!-- Text for exit -->
    <string name="press_once_again_to_exit">Press once again to exit</string>

</resources>
