<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >

    <TextView
        android:id="@+id/label_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_full_name"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/error_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_error_full_name"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_full_name"
        android:inputType="textCapWords" >
    </EditText>

    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_email"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/error_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_error_email"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/error_email_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_error_email_format"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_email"
        android:inputType="textEmailAddress" >
    </EditText>

    <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_username"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/error_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_error_username"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_username"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_label_password"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/error_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_error_password"
        android:textColor="#FF0000"
        android:textSize="16sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_password"
        android:inputType="textPassword" >
    </EditText>

    <LinearLayout
        android:id="@+id/spinner_group_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/spinner_group_main_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_source"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/spinner_group_sub_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_sub_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_sub_source"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner_sub_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>