<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/welcome_text_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/text_welcome"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_welcome_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_label_post"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/label_post_need"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:text="@string/text_label_post_need"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/label_post_offer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:text="@string/text_label_post_offer"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/label_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_label_list"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/label_my_needs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:text="@string/text_label_my_needs"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/label_my_offers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:text="@string/text_label_my_offers"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/label_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_label_settings"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/label_my_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_radius"
        android:paddingBottom="8dp"
        android:paddingLeft="25dp"
        android:paddingTop="8dp"
        android:text="@string/text_label_my_settings"
        android:textSize="16sp" />

</LinearLayout>