<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_label_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_title"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/label_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_label_description"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_description"
        android:inputType="textMultiLine"
        android:lines="2" >
    </EditText>

    <TextView
        android:id="@+id/label_classification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_label_classification"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/spinner_group_classification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner_classification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Spinner
            android:id="@+id/spinner_sub_classification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_label_target"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/spinner_group_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spinner_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" />

        <Spinner
            android:id="@+id/spinner_sub_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_label_period"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/button_group_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_period_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:text="@string/text_button_period_from" />

        <TextView
            android:id="@+id/seperator_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_seperator_period" />

        <Button
            android:id="@+id/button_period_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:text="@string/text_button_period_to" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_group_availability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/text_label_quantity"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:inputType="number" >
        </EditText>

        <TextView
            android:id="@+id/label_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/text_label_price"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:ems="10"
            android:inputType="number" >
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/label_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_label_location"
        android:textSize="20sp" />

    <!-- TODO: add auto-complete of location (Google map API) -->

    <LinearLayout
        android:id="@+id/group_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:ems="10"
            android:hint="@string/text_hint_location"
            android:inputType="text" >
        </EditText>

        <ImageView
            android:id="@+id/gps_loader"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:contentDescription="@string/text_content_description_gps_loader"
            android:src="@drawable/ic_action_refresh" />
    </LinearLayout>

    <TextView
        android:id="@+id/geometry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <!--
    <TextView
        android:id="@+id/label_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/text_label_photo"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_button_photo" />
    -->

</merge>