<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/address_dialog_road"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_road"
        android:inputType="textCapWords" >
    </EditText>

    <EditText
        android:id="@+id/address_dialog_postal_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_postal_code"
        android:inputType="textCapWords" >
    </EditText>

    <EditText
        android:id="@+id/address_dialog_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_city"
        android:inputType="textCapWords" >
    </EditText>

    <EditText
        android:id="@+id/address_dialog_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_hint_country"
        android:inputType="textCapWords" >
    </EditText>

</LinearLayout>