<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/text_group_ticket_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ticket_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:textSize="18sp"
            android:background="@drawable/border_radius" />

        <TextView
            android:id="@+id/ticket_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:paddingLeft="15dp"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/text_group_ticket_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_ticket_creation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/text_label_creation_date"
            android:textSize="14sp"
            android:textColor="#565656" />

        <TextView
            android:id="@+id/ticket_creation_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:paddingLeft="15dp"
            android:textSize="14sp"
            android:textColor="#565656" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_group_ticket_classification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_ticket_classification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/text_label_classification"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ticket_classification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:paddingLeft="15dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_group_ticket_target"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_ticket_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/text_label_target"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/ticket_target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:paddingLeft="15dp"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>